Added two style file: css/reset.css, css/default.css

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,44 @@ body {
     font-family: "Lato", sans-serif;
     font-size: 16px;
 }
+
+.button.secondary {
+    border-bottom: 1px solid #444;
+}
+
+nav {
+    background-color: #222;
+    padding: 5px 20px;
+
+    a {
+        color: #fff;
+        text-decoration: none;
+    }
+
+    ul {
+        list-style-type: none;
+    }
+
+    .menu li {
+        padding: 15px 5px;
+
+        a {
+            display: block;
+            // outline: 1px dashed red;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    }
+
+    .logo a {
+        font-size: 1.3rem;
+    }
+}
+
+/* Mobile menu */
+.menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
