--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,50 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 16px;
 }
+
+.button.secondary {
+  border-bottom: 1px solid #444;
+}
+
+nav {
+  background-color: #222;
+  padding: 5px 20px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav .menu li {
+  padding: 15px 5px;
+}
+
+nav .menu li a {
+  display: block;
+}
+
+nav .menu li a:hover {
+  text-decoration: underline;
+}
+
+nav .logo a {
+  font-size: 1.3rem;
+}
+
+/* Mobile menu */
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 /*# sourceMappingURL=style.css.map */
